--- a/yes.html
+++ b/yes.html
@@ -13,10 +13,10 @@
         </header>
 
         <nav>
-            <a href="#" class="sido-meny">Home</a>
-            <a href="#" class="sido-meny">Tester</a>
-            <a href="#" class="sido-meny">About</a>
-            <a href="#" class="sido-meny">Contact</a>
+            <a href="yes.html" class="sido-meny">Home</a>
+            <a href="tester.html" class="sido-meny">Tester</a>
+            <a href="about.html" class="sido-meny">About</a>
+            <a href="contact.html" class="sido-meny">Contact</a>
         </nav>
 
         <main>
