--- a/tester.html
+++ b/tester.html
@@ -64,8 +64,11 @@
                 body {
                     font-family: Arial, sans-serif;
                     text-align: center;
-                    padding: 50px;
+                    
                     background-color: #f0f0f0;
+                }
+                body nav{
+                    text-align:left;
                 }
                 #reaction-area {
                     width: 300px;
