--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
         <nav>
             <a href="yes.html" class="sido-meny">Home</a>
-            <a href="tester.html" class="sido-meny">Reactiontime </a>
+            <a href="tester.html" class="sido-meny">Tester </a>
             <a href="about.html" class="sido-meny">About</a>
             <a href="contact.html" class="sido-meny">Contact</a>
         </nav>
